# mtg-playpool

./: .gitignore  compose.yaml  example.env  pyvenv.cfg  readme.md  run.sh
backend/: Dockerfile
backend/app/: app.py  pyproject.toml  requirements.txt  schemas.py  settings.py
backend/app/mtgjson_db/: custom_decks.py  database.py  mtg_models.py  mtg_models_sqlite.py  users.py
backend/app/routes/: profile.py  search.py  utils.py
backend/app/routes/auth/: deps.py  login.py  me.py  register.py  utils.py
backend/app/routes/deck_builder/: deck_builder.py
backend/app/routes/search_engine/: sentsearch.py  utils.py
backend/app/schemas/: deck_shemas.py  user_schemas.py
backend/app/templates/: card.html
database/migrate/: Dockerfile  after.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/mtg-playpool-frontend/: package-lock.json  package.json
frontend/mtg-playpool-frontend/src/: App.js  index.css  index.js  router.js  styles.css  theme.js
frontend/mtg-playpool-frontend/src/api/: apiHandler.js  axios.js
frontend/mtg-playpool-frontend/src/components/: Card_Grid.jsx  DeckCard_Grid.jsx  Deck_Selector.jsx  Header.jsx  Layout.jsx  LoginComp.jsx  Mtg_Card.jsx  RegisterComp.jsx  RequireAuth.js  Search_Menu.jsx
frontend/mtg-playpool-frontend/src/context/: ActiveDeckContext.js  ActiveDeckProvider.js
frontend/mtg-playpool-frontend/src/hooks/: useAxiosPrivate.js  useFetchCards.js  useRefreshToken.js
frontend/mtg-playpool-frontend/src/pages/: AllCards.jsx  DeckCards.jsx  Homepage.jsx  Login.jsx  Signup.jsx
nginx/: nginx.conf
