[tool.poetry]
name = "app"
version = "0.1.0"
description = "The backend for the MTG-Playpool app."
authors = ["tDavid93 <toth.david.9308@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.101.1"
pydantic = "1.10.8"
sqlalchemy = "1.4.39"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
